--- a/Aier360/Controllers/校园/School.storyboard
+++ b/Aier360/Controllers/校园/School.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="XgD-dd-ezr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="XgD-dd-ezr">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -254,10 +254,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="vgX-ZP-GPR" secondAttribute="trailing" constant="-16" id="95k-nF-VSB"/>
                             <constraint firstItem="CCx-Pe-hbB" firstAttribute="top" secondItem="vgX-ZP-GPR" secondAttribute="bottom" id="Qvk-TV-3Ws"/>
-                            <constraint firstItem="vgX-ZP-GPR" firstAttribute="leading" secondItem="MQN-40-dDG" secondAttribute="leadingMargin" constant="-16" id="Xbf-OP-AWk"/>
                             <constraint firstItem="vgX-ZP-GPR" firstAttribute="top" secondItem="Kl3-xN-85X" secondAttribute="bottom" id="fVT-US-utx"/>
+                            <constraint firstItem="vgX-ZP-GPR" firstAttribute="leading" secondItem="MQN-40-dDG" secondAttribute="leading" id="xIY-4z-71b"/>
+                            <constraint firstAttribute="trailing" secondItem="vgX-ZP-GPR" secondAttribute="trailing" id="yZG-Z7-CZm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="校园" id="MNZ-nP-XnC"/>
